packages/rust-optimizer/core/src/snapshots/qwik_core__test__should_keep_non_migrated_binding_from_shared_destructuring_with_rest.snap
---
source: packages/rust-optimizer/core/src/test.rs
assertion_line: 7175
expression: output
---
==INPUT==


import { $ } from '@qwik.dev/core';

const { a, ...rest } = { a: 1, b: 2, c: 3 };

console.log('root', rest.b, rest.c);

export const handler = $(() => {
  console.log('qrl', a);
});

		
============================= test.js ==

import { qrl } from "@qwik.dev/core";
//
const q_handler_T7IDIUVU4lI = /*#__PURE__*/ qrl(()=>import("./test.tsx_handler_T7IDIUVU4lI"), "handler_T7IDIUVU4lI");
//
const { a, ...rest } = {
    a: 1,
    b: 2,
    c: 3
};
console.log('root', rest.b, rest.c);
export const handler = q_handler_T7IDIUVU4lI;
export { a as _auto_a };


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;AAGA,MAAM,EAAE,CAAC,EAAE,GAAG,MAAM,GAAG;IAAE,GAAG;IAAG,GAAG;IAAG,GAAG;AAAE;AAE1C,QAAQ,GAAG,CAAC,QAAQ,KAAK,CAAC,EAAE,KAAK,CAAC;AAElC,OAAO,MAAM,gCAEV\"}")
============================= test.tsx_handler_T7IDIUVU4lI.js (ENTRY POINT)==

import { _auto_a as a } from "./test";
//
export const handler_T7IDIUVU4lI = ()=>{
    console.log('qrl', a);
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;mCAOyB;IACvB,QAAQ,GAAG,CAAC,OAAO;AACrB\"}")
/*
{
  "origin": "test.tsx",
  "name": "handler_T7IDIUVU4lI",
  "entry": null,
  "displayName": "test.tsx_handler",
  "hash": "T7IDIUVU4lI",
  "canonicalFilename": "test.tsx_handler_T7IDIUVU4lI",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "$",
  "captures": false,
  "loc": [
    148,
    182
  ]
}
*/
== DIAGNOSTICS ==

[]
